tests/negative/gold/type_force_test.gold
tests/negative/type_force_test.toit:9:18: error: Constructors may not have return types
  constructor -> A:
                 ^
tests/negative/type_force_test.toit:9:3: error: Type mismatch. Expected 'A'. Got 'B'
  constructor -> A:
  ^~~~~~~~~~~
Compilation failed.
